api_versioned_docs/version-12.0.5/avalonia/media/geometry.mdx
---
title: 'Geometry'
hide_title: true
slug: '/avalonia/media/geometry'
uid: 'Avalonia.Media.Geometry'
commentId: 'T:Avalonia.Media.Geometry'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Media'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Geometry Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Media</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Base</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__lead">

Defines a geometric shape.

</div>

<div className="apiref-page__signature">

```csharp
public class Geometry
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="../avaloniaobject">AvaloniaObject</a> <span className="apiref-page__relation-separator">-&gt;</span> Geometry
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Derived types:</span> <a href="combinedgeometry">CombinedGeometry</a>, <a href="ellipsegeometry">EllipseGeometry</a>, <a href="geometrygroup">GeometryGroup</a>, <a href="linegeometry">LineGeometry</a>, <a href="polylinegeometry">PolylineGeometry</a>, <a href="rectanglegeometry">RectangleGeometry</a>, <a href="streamgeometry">StreamGeometry</a>
</div>
</div>

## Methods

| Name | Description |
| --- | --- |
| [Clone](#uid-6982587ff0) | Clones the geometry. |
| [Combine](#uid-03ba6ba14f) | Combines the two geometries using the specified [Avalonia.Media.GeometryCombineMode](xref:Avalonia.Media.GeometryCombineMode) and applies the specified transform to the resulting geometry. |
| [FillContains](#uid-1ecc042e3b) | Indicates whether the geometry's fill contains the specified point. |
| [GetRenderBounds](#uid-4f903c64e7) | Gets the geometry's bounding rectangle with the specified pen. |
| [GetWidenedGeometry](#uid-9265c7d05d) | Gets a [Avalonia.Media.Geometry](xref:Avalonia.Media.Geometry) that is the shape defined by the stroke on the Geometry produced by the specified Pen. |
| [Parse](#uid-f0f323635b) | Creates a [Avalonia.Media.Geometry](xref:Avalonia.Media.Geometry) from a string. |
| [StrokeContains](#uid-9137804922) | Indicates whether the geometry's stroke contains the specified point. |
| [TryGetPointAndTangentAtDistance](#uid-0cb785d427) | No summary available. |
| [TryGetPointAtDistance](#uid-8e9f7dcc61) | No summary available. |
| [TryGetSegment](#uid-50b46fd171) | No summary available. |
| [Bind (8 overloads)](../avaloniaobject.mdx#uid-1c60c7bda3) | Binds a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) to an [Avalonia.Data.BindingBase](xref:Avalonia.Data.BindingBase). Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [CheckAccess](../avaloniaobject.mdx#uid-260ff7a68d) | Returns a value indicating whether the current thread is the UI thread. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [ClearValue (4 overloads)](../avaloniaobject.mdx#uid-41de208fbe) | Clears a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty)'s local value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [CoerceValue](../avaloniaobject.mdx#uid-3bec32f39e) | Coerces the specified [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty). Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Equals](../avaloniaobject.mdx#uid-a8a8e94305) | Compares two objects using reference equality. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetBaseValue](../avaloniaobject.mdx#uid-9c615efbba) | Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetHashCode](../avaloniaobject.mdx#uid-7f7db1e7a2) | Gets the hash code for the object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetValue (3 overloads)](../avaloniaobject.mdx#uid-5142cd4792) | Gets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [IsAnimating](../avaloniaobject.mdx#uid-8cbfc7521a) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is animating. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [IsSet](../avaloniaobject.mdx#uid-f8bf0bbdcc) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is set on this object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [SetCurrentValue (2 overloads)](../avaloniaobject.mdx#uid-38759fd088) | Sets the value of a dependency property without changing its value source. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [SetValue (3 overloads)](../avaloniaobject.mdx#uid-47d14e19d7) | Sets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [VerifyAccess](../avaloniaobject.mdx#uid-3b9d3c9793) | Checks that the current thread is the UI thread and throws if not. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-6982587ff0"></span>

### Clone Method

Clones the geometry.

```csharp
public Avalonia.Media.Geometry Clone()
```

#### Returns

[Avalonia.Media.Geometry](xref:Avalonia.Media.Geometry)

A cloned geometry.


</section>

<section className="apiref-page__member-entry">

<span id="uid-03ba6ba14f"></span>

### Combine Method

Combines the two geometries using the specified [Avalonia.Media.GeometryCombineMode](xref:Avalonia.Media.GeometryCombineMode) and applies the specified transform to the resulting geometry.

```csharp
public Avalonia.Media.Geometry Combine(Avalonia.Media.Geometry geometry1, Avalonia.Media.RectangleGeometry geometry2, Avalonia.Media.GeometryCombineMode combineMode, Avalonia.Media.Transform transform)
```

#### Parameters

`geometry1` [Avalonia.Media.Geometry](xref:Avalonia.Media.Geometry)

The first geometry to combine.


`geometry2` [Avalonia.Media.RectangleGeometry](xref:Avalonia.Media.RectangleGeometry)

The second geometry to combine.


`combineMode` [Avalonia.Media.GeometryCombineMode](xref:Avalonia.Media.GeometryCombineMode)

One of the enumeration values that specifies how the geometries are combined.


`transform` [Avalonia.Media.Transform](xref:Avalonia.Media.Transform)

A transformation to apply to the combined geometry, or `null`.


#### Returns

[Avalonia.Media.Geometry](xref:Avalonia.Media.Geometry)


</section>

<section className="apiref-page__member-entry">

<span id="uid-1ecc042e3b"></span>

### FillContains Method

Indicates whether the geometry's fill contains the specified point.

```csharp
public bool FillContains(Avalonia.Point point)
```

#### Parameters

`point` [Avalonia.Point](xref:Avalonia.Point)

The point.


#### Returns

bool

`true` if the geometry contains the point; otherwise, `false`.


</section>

<section className="apiref-page__member-entry">

<span id="uid-4f903c64e7"></span>

### GetRenderBounds Method

Gets the geometry's bounding rectangle with the specified pen.

```csharp
public Avalonia.Rect GetRenderBounds(Avalonia.Media.IPen pen)
```

#### Parameters

`pen` [Avalonia.Media.IPen](xref:Avalonia.Media.IPen)

The stroke thickness.


#### Returns

[Avalonia.Rect](xref:Avalonia.Rect)

The bounding rectangle.


</section>

<section className="apiref-page__member-entry">

<span id="uid-9265c7d05d"></span>

### GetWidenedGeometry Method

Gets a [Avalonia.Media.Geometry](xref:Avalonia.Media.Geometry) that is the shape defined by the stroke on the Geometry
produced by the specified Pen.

```csharp
public Avalonia.Media.Geometry GetWidenedGeometry(Avalonia.Media.IPen pen)
```

#### Parameters

`pen` [Avalonia.Media.IPen](xref:Avalonia.Media.IPen)

The pen to use.


#### Returns

[Avalonia.Media.Geometry](xref:Avalonia.Media.Geometry)

The outlined geometry.


</section>

<section className="apiref-page__member-entry">

<span id="uid-f0f323635b"></span>

### Parse Method

Creates a [Avalonia.Media.Geometry](xref:Avalonia.Media.Geometry) from a string.

```csharp
public Avalonia.Media.Geometry Parse(string s)
```

#### Parameters

`s` string

The string.


#### Returns

[Avalonia.Media.Geometry](xref:Avalonia.Media.Geometry)

A [Avalonia.Media.StreamGeometry](xref:Avalonia.Media.StreamGeometry).


</section>

<section className="apiref-page__member-entry">

<span id="uid-9137804922"></span>

### StrokeContains Method

Indicates whether the geometry's stroke contains the specified point.

```csharp
public bool StrokeContains(Avalonia.Media.IPen pen, Avalonia.Point point)
```

#### Parameters

`pen` [Avalonia.Media.IPen](xref:Avalonia.Media.IPen)

The pen to use.


`point` [Avalonia.Point](xref:Avalonia.Point)

The point.


#### Returns

bool

`true` if the geometry contains the point; otherwise, `false`.


</section>

<section className="apiref-page__member-entry">

<span id="uid-0cb785d427"></span>

### TryGetPointAndTangentAtDistance Method

```csharp
public bool TryGetPointAndTangentAtDistance(double distance, Avalonia.Point& point, Avalonia.Point& tangent)
```

#### Parameters

`distance` double


`point` [Avalonia.Point](xref:Avalonia.Point)&amp;


`tangent` [Avalonia.Point](xref:Avalonia.Point)&amp;


#### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-8e9f7dcc61"></span>

### TryGetPointAtDistance Method

```csharp
public bool TryGetPointAtDistance(double distance, Avalonia.Point& point)
```

#### Parameters

`distance` double


`point` [Avalonia.Point](xref:Avalonia.Point)&amp;


#### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-50b46fd171"></span>

### TryGetSegment Method

```csharp
public bool TryGetSegment(double startDistance, double stopDistance, bool startOnBeginFigure, Avalonia.Media.Geometry& segmentGeometry)
```

#### Parameters

`startDistance` double


`stopDistance` double


`startOnBeginFigure` bool


`segmentGeometry` [Avalonia.Media.Geometry](xref:Avalonia.Media.Geometry)&amp;


#### Returns

bool


</section>

## Properties

| Name | Description |
| --- | --- |
| [Bounds](#uid-404ee0d0a8) | Gets the geometry's bounding rectangle. |
| [ContourLength](#uid-5dc65c547e) | Gets the geometry's total length as if all its contours are placed in a straight line. |
| [Transform](#uid-ca73562bb3) | Gets or sets a transform to apply to the geometry. |
| [Dispatcher](../avaloniaobject.mdx#uid-b25fa51632) | Returns the [Avalonia.AvaloniaObject.Dispatcher](xref:Avalonia.AvaloniaObject.Dispatcher) that this [Avalonia.AvaloniaObject](xref:Avalonia.AvaloniaObject) is associated with. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Item](../avaloniaobject.mdx#uid-c1d1f1bc0f) | Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-404ee0d0a8"></span>

### Bounds Property

Gets the geometry's bounding rectangle.

```csharp
public Avalonia.Rect Bounds { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-5dc65c547e"></span>

### ContourLength Property

Gets the geometry's total length as if all its contours are placed
in a straight line.

```csharp
public double ContourLength { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ca73562bb3"></span>

### Transform Property

Gets or sets a transform to apply to the geometry.

```csharp
public Avalonia.Media.Transform Transform { get; set; }
```

</section>

## Fields

| Name | Description |
| --- | --- |
| [TransformProperty](#uid-deccb386d8) | Defines the [Avalonia.Media.Geometry.Transform](xref:Avalonia.Media.Geometry.Transform) property. |

<section className="apiref-page__member-entry">

<span id="uid-deccb386d8"></span>

### TransformProperty Field

Defines the [Avalonia.Media.Geometry.Transform](xref:Avalonia.Media.Geometry.Transform) property.

```csharp
public Avalonia.StyledProperty<TValue><Avalonia.Media.Transform> TransformProperty
```

</section>

## Events

| Name | Description |
| --- | --- |
| [Changed](#uid-9001f59bae) | Raised when the geometry changes. |
| [PropertyChanged](../avaloniaobject.mdx#uid-d758e26fae) | Raised when a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value changes on this object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-9001f59bae"></span>

### Changed Event

Raised when the geometry changes.

```csharp
public event EventHandler Changed
```

</section>

</ApiRefPage>

